# Isro

ascend_web_platform/backend/: main.py  requirements.txt  ros_interface.py
ascend_web_platform/frontend/: index.html  package.json
ascend_web_platform/frontend/src/: App.jsx  index.css
ascend_web_platform/frontend/src/components/: Detections.jsx  Header.jsx  Map.jsx  Telemetry.jsx  VideoFeed.jsx
src/ascend_bringup/: CMakeLists.txt  package.xml
src/ascend_bringup/launch/: ascend.launch.py
src/ascend_mavros_interface/: package.xml  setup.py
src/ascend_mavros_interface/ascend_mavros_interface/: vio_bridge_node.py
src/ascend_mission_planner/: package.xml  setup.py
src/ascend_mission_planner/ascend_mission_planner/: mission_planner_node.py
src/ascend_precision_landing/: CMakeLists.txt  package.xml
src/ascend_precision_landing/scripts/: precision_landing.py
src/ascend_rock_detection/: CMakeLists.txt  package.xml
src/ascend_rock_detection/scripts/: rock_detector.py
src/ascend_sensors/: CMakeLists.txt  package.xml
src/ascend_sensors/launch/: sensors.launch.py
src/ascend_vio/: CMakeLists.txt  package.xml
src/ascend_vio/launch/: vio.launch.py
