<package format="3">
  <name>ascend_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for ASCEND micro-UAV project.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
