<package format="3">
  <name>ascend_sensors</name>
  <version>0.0.1</version>
  <description>Package for sensor drivers and launch files for ASCEND.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>tf_luna_driver</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>tf_luna_driver</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
