<package format="3">
  <name>ascend_vio</name>
  <version>0.0.1</version>
  <description>Package for visual‑inertial odometry integration.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>isaac_ros_visual_slam</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
